--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Playlist API Hack</title>
+    <link href='http://fonts.googleapis.com/css?family=Chewy|Raleway:400,700,900,200' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
@@ -14,7 +15,8 @@
        <hr>
        <section class="find">
            <input type="text" class="input-search">
-           <button type="submit" class="btn-find">Search</button>
+           <input type="submit" class="input-submit">
+           <!--<button type="submit" class="btn-find">Search</button>-->
        </section>
        <hr>
        <section class="results">
