--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Playlist API Hack</title>
     <link href='http://fonts.googleapis.com/css?family=Chewy|Raleway:400,700,900,200' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
   <section class="main">
@@ -16,23 +18,27 @@
        <section class="find">
            <input type="text" class="input-search">
            <input type="submit" class="input-submit">
-           <!--<button type="submit" class="btn-find">Search</button>-->
        </section>
        <hr>
        <section class="results">
            <ul id="results-list">
                <li>
+                                        <i class="fa fa-angle-left"></i>
+
                    <figure>
                        <div class="playlist-img">
+                       <img src="http://lorempixel.com/g/300/300/abstract" width="300px" height="300px" alt="test" />
 
                        </div>
                        <figcaption class="caption">
-                           <h3></h3>
+                           <h3>Playlist Title</h3>
                        </figcaption>
                    </figure>
+                     <i class="fa fa-angle-right"></i>
                </li>
            </ul>
        </section>
-  </section>  
+  </section>
+  <script src="js/app.js"></script>  
 </body>
 </html>
