js file created

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
        </header>
        <hr>
        <section class="find">
-           <input type="text" class="input-search">
-           <input type="submit" class="input-submit">
+          <form class="playlist-search">
+               <input type="text" class="input-search">
+               <input type="submit" class="input-submit">
+           </form>
        </section>
        <hr>
        <section class="results">
