--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <section class="results">
            <ul id="results-list">
                <li>
-                                        <i class="fa fa-angle-left"></i>
+                                        <i class="fa fa-angle-double-left"></i>
 
                    <figure>
                        <div class="playlist-img">
@@ -36,7 +36,7 @@
                            <h3>Playlist Title</h3>
                        </figcaption>
                    </figure>
-                     <i class="fa fa-angle-right"></i>
+                     <i class="fa fa-angle-double-right"></i>
                </li>
            </ul>
        </section>
