--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <section class="find">
           <form class="playlist-search">
                <input type="text" class="input-search">
-               <input type="submit" class="input-submit">
+               <input type="submit" class="input-submit" value="submit">
            </form>
        </section>
        <hr>
@@ -36,7 +36,7 @@
                            <h3>Playlist Title</h3>
                        </figcaption>
                    </figure>
-                     <i  id="next" class="fa fa-angle-double-right"></i>
+                     <i id="next"  class="fa fa-angle-double-right"></i>
                </li>
            </ul>
        </section>
